--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>ScaffoldAngular</title>
-  <base href="/app/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta charset="utf-8"/>
+  <meta http-equiv="x-ua-compatible" content="IE=edge"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta name="renderer" content="webkit"/>
+  <meta name="description" content=""/>
+  <meta name="keywords" content=""/>
+  <title>Angular Demo App</title>
+  <base href="/app/"/>
+  <link rel="icon" type="image/x-icon" href="favicon.ico"/>
 </head>
 <body>
   <app-root></app-root>
